# nyashell

./: .gitignore  COMPLETE_CONVERSATION_SUMMARY.md  Cargo.toml  FEATURES.md  FINAL_STATUS.md  INSTALLATION_SUMMARY.md  PORTING_GUIDE.md  README.md  build.bat  fix-input.ps1  install-profile.ps1  install.bat  nu-config.toml  test-settings.json  windows-terminal-profile.json
docs/: index.html
src/: config.rs  main.rs  tui.rs
