[package]
name = "nyashell"
version = "1.0.0"
description = "NyaShell - Custom Terminal TUI"
authors = ["NyaShell Team"]
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
git2 = "0.18"
toml = "0.8"
clipboard = "0.5"
sysinfo = "0.28.0"